--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "gsap": "^3.13.0",
     "identity-obj-proxy": "^3.0.0",
     "input-otp": "^1.2.4",
     "jest": "^29.7.0",
